--- a/VGA_labwork/Lab1Demo.qsf
+++ b/VGA_labwork/Lab1Demo.qsf
@@ -387,5 +387,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE RTL/loseDetector.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/winDetector.sv
 set_location_assignment PIN_Y27 -to GodMode
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/soundHandler.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/rocketBMP.sv
 set_global_assignment -name SLD_FILE db/coll_spd_debug_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
