--- a/VGA_labwork/Lab1Demo.qsf
+++ b/VGA_labwork/Lab1Demo.qsf
@@ -272,10 +272,8 @@ set_global_assignment -name BDF_FILE RTL/VGA/AliensController.bdf
 set_global_assignment -name BDF_FILE RTL/VGA/TOP_VGA_DEMO_KBD.bdf
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smileyface_moveCollision.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/game_controller.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/back_ground_drawSquare.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/square_object.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/smileyBitMap.sv
-set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/back_ground_draw.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/objects_mux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/VGA_Controller.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/VGA/NumbersBitMap.sv
@@ -388,5 +386,10 @@ set_global_assignment -name SYSTEMVERILOG_FILE RTL/winDetector.sv
 set_location_assignment PIN_Y27 -to GodMode
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/soundHandler.sv
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/rocketBMP.sv
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/background.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/HeartsMatrixBitMap.sv
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/Lab1Demo.sv
+set_global_assignment -name BDF_FILE RTL/HeartsDisplay.bdf
 set_global_assignment -name SLD_FILE db/coll_spd_debug_auto_stripped.stp
+set_global_assignment -name SYSTEMVERILOG_FILE RTL/horizontalRocketController.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
