--- a/VGA_labwork/Lab1Demo.qsf
+++ b/VGA_labwork/Lab1Demo.qsf
@@ -251,9 +251,6 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to BG_RGB[5]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to BG_RGB[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to BG_RGB[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to boardersDrawReq
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_TRIGGER=1" -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT crc[9] -to auto_signaltap_0|vcc -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_INVERSION_MASK=00000000000000000000000000000" -section_id auto_signaltap_0
@@ -507,5 +504,10 @@ set_location_assignment PIN_Y27 -to GodModeSwitch
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GodMode
 set_global_assignment -name BDF_FILE RTL/powerUps.bdf
 set_global_assignment -name SYSTEMVERILOG_FILE RTL/powerupsManager.sv
-set_global_assignment -name SLD_FILE db/coll_spd_debug_auto_stripped.stp
+set_global_assignment -name VECTOR_WAVEFORM_FILE rocketsSim.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE rocketsControllerSim.vwf
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE db/coll_spd_debug_auto_stripped.stp
